bk_ida/gccida/c3/process_options
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_options/src/toplev.c:5370:22: error: use of undeclared identifier 'arg0'
user_label_prefix = &arg0; 
                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_options/src/toplev.c:5377:7: error: use of undeclared identifier 'arg0'
v1 = &arg0; 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_options/src/toplev.c:5382:7: error: use of undeclared identifier 'arg0'
v0 = &arg0; 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_options/src/toplev.c:5390:25: error: use of undeclared identifier 'arg0'
print_version( stderr, &arg0); 
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_options/src/toplev.c:5392:38: error: use of undeclared identifier 'arg0'
print_switch_values( stderr, 0, 75, &arg0, " ", "\n"); 
                                     ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_options/src/obj/toplev.o] Error 1
